--- a/got/deaths.css
+++ b/got/deaths.css
@@ -43,8 +43,8 @@ h2 .charLink{
 }
 #close {
 	position: absolute;
-	bottom:0; 
-	right:10px;
+	bottom:8px; 
+	right:8px;
 	color: #caad2d;
 }
 #close a{
