--- a/olympics/olympics.css
+++ b/olympics/olympics.css
@@ -1,11 +1,44 @@
 body {
-  padding: 15px;
   color: #37474F;
   background: #CFD8DC;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   font-size: 20px;
 }
+
+#barefoot-footer {
+  padding: 5px;
+  font-size: 16px;
+  color: #FFF;
+  background: #00A6FF;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 300;
+  text-align:right;
+}
+
+#barefoot-footer a{
+  color: #FFF;
+}
+
+#barefoot-footer li {
+  display: inline;
+}
+
+#barefoot-footer li img{
+  width: 16px;
+  height: 16px;
+  margin: 0 4px 0 0;
+}
+
+#barefoot-home-links{
+  float: left;
+}
+
+#main-content{
+  margin: 15px;
+}
+
+
 
 svg {
   max-width: 1400px;
