home page colour changes

--- a/css/footer.css
+++ b/css/footer.css
@@ -21,7 +21,8 @@ html, body {
 	clear: both;
 	font-size: 16px;
 	color: #FFF;
-	background: #00A6FF;
+  background: #08BDBD;
+/*  background: #00A6FF; */
 	font-family: 'Open Sans Condensed', sans-serif;
 	font-weight: 300;
 	text-align:right;
