--- a/football/css/ufwc.css
+++ b/football/css/ufwc.css
@@ -4,6 +4,7 @@ body {
   font-family: 'Yanone Kaffeesatz', sans-serif;
   font-weight: 200;
   text-align: center;
+  font-size: 16px;
 }
 
 #main-content {
@@ -62,7 +63,16 @@ a {
   text-decoration: none;
 }
 
+#run {
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
 #pause {
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
   display: none;
 }
 
@@ -76,6 +86,7 @@ a {
 
 #matchDetails {
   margin-top: 40px;
+  font-size: 0.85em;
 }
 
 #matchResult, #matchChamp {
@@ -87,6 +98,12 @@ text {
   font-weight: 200;
 }
 
+
+@media screen and (min-width: 500px){  
+    #matchDetails{
+      font-size: 1em;
+    }
+}
 
 @media screen and (min-width: 1200px){  
     svg{
@@ -108,6 +125,12 @@ text {
     }
     #matchDetails{
       margin-bottom: 400px;
+      font-size: 0.85em;
     }
+}
 
+@media screen and (min-width: 1400px){  
+    #matchDetails{
+      font-size: 1em;
+    }
 }
