--- a/vivcom/css/main.css
+++ b/vivcom/css/main.css
@@ -1,3 +1,10 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 
 body {
 	font-family: 'Lato', sans-serif;
@@ -11,6 +18,8 @@ body {
 	position: fixed;
 	z-index: 10;
 	width: 100%;
+	border-bottom: 1px solid #1fb3a9;
+
 }
 
 nav {
@@ -63,11 +72,18 @@ nav li a{
 
 #main-body {
 	max-width: 1150px;
-	padding: 20px;
 	margin: auto;
 	padding-top: 80px;
-	margin-bottom: 100px;
+	padding-bottom: 100px;
 	xbackground-color: #dddddd;
+}
+
+.featured-section {
+	margin: 30px 0 30px 0;
+	padding: 1px 0 1px 0;
+	width: 100%;
+	background-color: #1fb3a9;
+	color: #ffffff;
 }
 
 #main-body li{
@@ -75,6 +91,20 @@ nav li a{
     margin-left: 18px; 
 }
 
+.featured-section h2,
+.featured-section a{
+	color: #ffffff;
+}
+
+.featured-section h2,
+.featured-section p{
+	text-align: center;
+	margin-top: 10px;
+}
+
+img {
+	max-width: 100%;
+}
 a {
 	color: #1fb3a9;
 }
@@ -85,36 +115,85 @@ h1, h2, h3 {
 }
 
 h1 {
-	font-size: 2.5em;
-	text-align: center;
+	font-size: 2em;
+	margin: 30px 15px 20px 15px;
+	line-height: 1em;
 }
 
 h2 {
-	font-size: 2em;
-	margin-top: 30px;
-	margin-bottom: 20px;
-}
-
-h3 {
 	font-size: 1.5em;
-	margin-top: 30px;
-	margin-bottom: 20px;
+	margin: 30px 15px 15px 15px;
+	line-height: 1em;
 }
 
+h2 a {
+	text-decoration: none;
+}
 p {
-	margin-bottom: 10px;
+	margin: 0 15px 10px 15px;
 }
 
-a.donate-button {
+ol,ul {
+	margin: 0 15px 10px 15px;
+} 
+a.button {
 	color: #ffffff;
 	padding: 10px 40px 10px 40px ;
 	border: 0 solid #1fb3a9;
     border-radius: 5px;
     background: #1fb3a9;
+	text-transform: uppercase;
+	text-decoration: none;
+}
+
+.button-holder {
+	text-align: center;
+	margin-top: 50px;
+}
+
+label {
+	display: inline-block;
+    width: 170px;
+}
+
+input[type=text] {
+    border: 1px solid #1fb3a9;
+    border-radius: 2px;
+    width: 200px;
 }
 
 td {
 	padding: 5px;
+}
+
+.text-photo {
+	border-top: 1px solid #1fb3a9;
+	border-bottom: 1px solid #1fb3a9;
+}
+
+.embed-container { 
+	position: relative; 
+	padding-bottom: 56.25%; 
+	height: 0; 
+	overflow: hidden; max-width: 100%;
+}
+.embed-container iframe, 
+.embed-container object, 
+.embed-container embed {
+	position: absolute; 
+	top: 0; 
+	left: 0; 
+	width: 100%; 
+	height: 100%; 
+}
+
+@media screen and (min-width: 600px){	
+	.text-photo {
+		width: 90%;
+		margin-left: 15px;
+		margin-right: 15px;
+		border: 1px solid #1fb3a9;
+	}
 }
 
 @media screen and (min-width: 900px){	
@@ -137,9 +216,6 @@ td {
 		height: 60px;
 		margin: 5px 0 0 5px;
 	}
-	h1 {
-		display: none;
-	}
 	#menu-icon {
 		display: none;
 	}
@@ -148,6 +224,28 @@ td {
 		height: 60px;
 		margin-left: 20px;
 		margin-top: 5px;
+	}
+	.team-member{
+		margin-top: 20px;
+		clear: both;
+	}
+	.text-photo{
+		width: 450px;
+		float: right;
+		border: 1px solid #1fb3a9;
+	}
+	.featured-section{
+		width: 50%;
+		margin-left: 15px;
+		margin-right: 15px;
+		float: right;
+		border: 1px solid #1fb3a9;
+	}
+}
+
+@media screen and (min-width: 1200px){	
+	.text-photo{
+		width: 600px;
 	}
 }
 
