--- a/football/path.css
+++ b/football/path.css
@@ -36,6 +36,13 @@ p {
   max-width: 700px;
   margin: auto;
   margin-bottom: 20px;
+  max-width: auto;
+}
+#key {
+  max-width: 100%;
+  font-size: 0.8em;
+  text-align: left;
+  margin-left: 50px;
 }
 .nav {
   font-size: 1.4em;
@@ -60,7 +67,7 @@ p {
 }
 
 svg text {
-    fill: #5c6672;
+    xfill: #5c6672;
     font-family: sans-serif;
     font-size: 18px;
 }
@@ -72,9 +79,8 @@ svg .teamName {
 }
 
 svg .playerName, svg .playerCity {
-    fill: #d0d0d0;
+    xfill: #d0d0d0;
     font-family: sans-serif;
-    font-size: 12px;
 }
 
 svg .link {
