--- a/football/css/ufwc-map.css
+++ b/football/css/ufwc-map.css
@@ -53,17 +53,18 @@
       }
 
       h1 {
-        line-height: 34px;
+        margin-top: 0;
+        line-height: 20px;
         font-family: 'Abril Fatface', cursive;
         text-align: center;
       }
 
       h1 #t1,#t2 {
-        font-size: 50px;
+        font-size: 28px;
       }
 
       h1 #t3,#t4 {
-        font-size: 43px;
+        font-size: 24px;
       }
 
       h2 {
@@ -104,6 +105,7 @@
 
 
       #champions{
+        display: none;
         xborder-style: solid;
         xborder-color: red;
         height: 70px;
@@ -114,12 +116,12 @@
         xborder-style: solid;
         xborder-color: green;
         padding-left: 20px;
-        float: left;
+        text-align: center;
       }
 
       #controls img{
         width: 30px;
-        margin: 20px 0 0 0;
+        margin: 0;
       }
 
       #currentGameDetails {
@@ -186,14 +188,16 @@
       }
 
       #textContent {
+        font-size: 16px;
+        line-height: 16px;
         z-index: 110;
         display: block;
-        width: 500px;
+        width: 90%;
         height: auto;
-        padding: 20px;
+        padding: 2%;
         padding-bottom: 0;
         margin: auto;
-        margin-top: 50px;
+        margin-top: 10px;
         background-color: #2A2C39;
         border:  1px solid #d0d0d0;
         -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
@@ -337,6 +341,8 @@
 @media screen and (min-width: 800px){
   #textContent {
     width: 680px;
+    font-size: 17px;
+    line-height: 17px;
   }
   h1 {
     line-height: 40px;
@@ -347,6 +353,21 @@
   h1 #t3,#t4 {
     font-size: 60px;
   }
+  #champions{
+    display: block;
+    margin: auto;
+  }
+
+  #controls {
+    float: left;
+    padding-left: 20px;
+  }
+
+  #controls img{
+    width: 30px;
+    margin: 20px 0 0 0;
+  }
+
 }
 
 
