--- a/css/main-new01.css
+++ b/css/main-new01.css
@@ -1,29 +1,10 @@
-:root {
-  --orange-light: #FE4E00;
-  --orange-dark: #C60F0F;
-  --green-light: #8EA604;
-  --green-dark: #19513E;
-  --blue-light: #33658A;
-  --text-dark: #1A2830;
-
-  --highlight1: #FE4E00;
-  --lowlight1: #C60F0F;
-  --highlight2: #8EA604;
-  --lowlight2: #19513E;
-  --neutral: #33658A;
-  --text-dark: #1A2830;
-
-}
-
 @media only screen and (min-width: 600px) and (max-width: 900px) {
   body {
-    background-color: var(--neutral);
-    color: var(--text-dark);
+    background-color: #C60F0F;
+    color: #1A2830;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     text-align: center;
-    font-size: 2vw;
-    margin-bottom: -20px;
   }
 
   #portrait{
@@ -31,107 +12,69 @@
     -webkit-filter: drop-shadow(0 0 10px  rgba(0, 0, 0, 0.27));
     filter: drop-shadow(5px 5px 5px #222);
     position: absolute;
-    left: 0;
-    top: 0;
+    left: -4vw;
+    top: -6vw;
     z-index: -1;
   }
 
   h1, h2{
     font-family: 'Bungee', cursive;
-    font-size: 8vw;
-    line-height: 10vw;
+    font-size: 7.5vw;
+    line-height: 9vw;
   }
-
-  h3{
-    font-size: 2.5vw;
-    line-height: normal;
-    font-weight: 700;
-    margin: 2vw 3vw;
-  }
-
-  a {
-    color: #1A2830;
-  }
-
-  p {
-    margin: 2vw 1vw;
-  }
-
-
 
   ul{
     display: grid;
+    overflow: hidden;
     grid-gap: 1vw;
-    grid-auto-rows: 10vw;
-    grid-template-columns: 11vw repeat(7, 10vw) 11vw;
+    grid-auto-rows: 9vw;
+    grid-template-columns: repeat(10, 9vw);
     transform-origin: 0 0;
     transform: skewY(-11deg);
+    margin-top: -8vw;
   }
 
-  #social li{
-    background-color: var(--text-dark);
+  li{
+    background-color: #FE4E00;
     outline-style: solid;
-    outline-color: var(--highlight2);
+    outline-color:#33658A;
     outline-width: 1.10vw;
-  }
-   #social .headline {
-    background-color: var(--highlight1);
-  }
-
-  img, svg{
-    width: 100%;
-    display: block;
-  }
-
-  svg {
-    fill: var(--highlight1);
   }
 
   #social{
     margin-top: -8vw;
   }
 
-  #bricks{
-    width: 98vw;
-    padding: 1vw 1vw 40vw 1vw;
-    grid-template-columns: repeat(9, 10vw);
-    background-color: var(--highlight2);
-  }
-
-  #bricks li{
-    grid-column-end: span 3;
-    grid-row-end: span 10;
-    background-color: var(--highlight1);
-  }
-
-  #social img, svg{
+  #social img{
+    width: 100%;
     height: 100%;
+    display: block;
   }
 
-  #social .hole {
+  .hole {
     background-color: rgba(1,1,1,0);
   }
 
-  #social .blankCell {
-    background-color: var(--highlight2);
+  .blankCell {
+    background-color: #33658A;
   }
 
   #social li:nth-child(1){ grid-column: 2; grid-row: 8; }
   #social li:nth-child(2){ grid-column: 3; grid-row: 9; }
   #social li:nth-child(3){ grid-column: 5; grid-row: 10; }
   #social li:nth-child(4){ grid-column: 7; grid-row: 9; }
-  #social li:nth-child(5){ grid-column: 8; grid-row: 8; }
+  #social li:nth-child(5){ grid-column: 9; grid-row: 9; }
   #social li:nth-child(6){ grid-column: 2; grid-row: 10; }
   #social li:nth-child(7){ grid-column: 4; grid-row: 11; }
   #social li:nth-child(8){ grid-column: 8; grid-row: 11; }
   
   #social li:nth-child(9){ grid-column: 1 / 4; grid-row: 3; }
-  #social li:nth-child(10){ grid-column: 2 / 7; grid-row: 4; }
-  #social li:nth-child(11){ grid-column: 5 / 10; grid-row: 7; }
+  #social li:nth-child(10){ grid-column: 2 / 8; grid-row: 4; }
+  #social li:nth-child(11){ grid-column: 5 / 11; grid-row: 7; }
   
   #social li:nth-child(12){ grid-column: 5 / 7; grid-row: 3; }
   #social li:nth-child(13){ grid-column: 9; grid-row: 4; }
-  #social li:nth-child(14){ grid-column: 1/ 6; grid-row: 5; }
+  #social li:nth-child(14){ grid-column: 1/6; grid-row: 5; }
   #social li:nth-child(15){ grid-column: 3 / 5; grid-row: 6; }
   #social li:nth-child(16){ grid-column: 6 / 9; grid-row: 6; }
   #social li:nth-child(17){ grid-column: 8 / 10; grid-row: 5; }
@@ -140,42 +83,45 @@
   #social li:nth-child(20){ grid-column: 7 / 9; grid-row: 9; }
   #social li:nth-child(21){ grid-column: 4 / 6; grid-row: 9; }
   #social li:nth-child(22){ grid-column: 2 / 4; grid-row: 7; }
-  #social li:nth-child(23){ grid-column: 9 / 10; grid-row: 8; }
+  #social li:nth-child(23){ grid-column: 9 / 11; grid-row: 8; }
   #social li:nth-child(24){ grid-column: 7 / 9; grid-row: 10; }
   #social li:nth-child(25){ grid-column: 1 / 4; grid-row: 11; }
-  #social li:nth-child(26){ grid-column: 7 / 9 ; grid-row: 10; }
+  #social li:nth-child(26){ grid-column: 10; grid-row: 11; }
   #social li:nth-child(27){ grid-column: 3 / 8; grid-row: 12; }
-  #social li:nth-child(28){ grid-column: 9 / 10; grid-row: 12; }
+  #social li:nth-child(28){ grid-column: 9 /11; grid-row: 12; }
 
   #social li:nth-child(29){ grid-column: 1 / -1; grid-row: 1; }
   #social li:nth-child(30){ grid-column: 1 / -1; grid-row: 2; }
   #social li:nth-child(31){ grid-column: 4; grid-row: 3; }
   #social li:nth-child(32){ grid-column: 7 / -1; grid-row: 3; }
   #social li:nth-child(33){ grid-column: 1; grid-row: 4; }
-  #social li:nth-child(34){ grid-column: 7 / 9; grid-row: 4; }
-  #social li:nth-child(35){ grid-column: 6 / 8; grid-row: 5; }
-  #social li:nth-child(36){ grid-column: 1 / 3; grid-row: 6; }
-  #social li:nth-child(37){ grid-column: 5; grid-row: 6; }
-  #social li:nth-child(38){ grid-column: 9; grid-row: 6; }
-  #social li:nth-child(39){ grid-column: 1; grid-row: 7; }
-  #social li:nth-child(40){ grid-column: 4; grid-row: 7; }
-  #social li:nth-child(41){ grid-column: 3 / 5; grid-row: 8; }
-  #social li:nth-child(42){ grid-column: 7; grid-row: 8; }
-  #social li:nth-child(43){ grid-column: 1 / 3; grid-row: 9; }
-  #social li:nth-child(44){ grid-column: 6; grid-row: 9; }
-  #social li:nth-child(45){ grid-column: 9; grid-row: 9; }
-  #social li:nth-child(46){ grid-column: 1; grid-row: 10; }
-  #social li:nth-child(47){ grid-column: 3 / 5; grid-row: 10; }
-  #social li:nth-child(48){ grid-column: 6; grid-row: 10; }
-  #social li:nth-child(49){ grid-column: 9; grid-row: 10; }
-  #social li:nth-child(50){ grid-column: 5 / 8; grid-row: 11; }
-  #social li:nth-child(51){ grid-column: 9; grid-row: 11; }
-  #social li:nth-child(52){ grid-column: 1 / 3; grid-row: 12; }
-  #social li:nth-child(53){ grid-column: 8 / -1; grid-row: 12; }
+  #social li:nth-child(34){ grid-column: 8; grid-row: 4; }
+  #social li:nth-child(35){ grid-column: 10; grid-row: 4; }
+  #social li:nth-child(36){ grid-column: 6 / 8; grid-row: 5; }
+  #social li:nth-child(37){ grid-column: 10; grid-row: 5; }
+  #social li:nth-child(38){ grid-column: 1 / 3; grid-row: 6; }
+  #social li:nth-child(39){ grid-column: 5; grid-row: 6; }
+  #social li:nth-child(40){ grid-column: 9 / -1; grid-row: 6; }
+  #social li:nth-child(41){ grid-column: 1; grid-row: 7; }
+  #social li:nth-child(42){ grid-column: 4; grid-row: 7; }
+  #social li:nth-child(43){ grid-column: 3 / 5; grid-row: 8; }
+  #social li:nth-child(44){ grid-column: 7 / 9; grid-row: 8; }
+  #social li:nth-child(45){ grid-column: 1 / 3; grid-row: 9; }
+  #social li:nth-child(46){ grid-column: 6; grid-row: 9; }
+  #social li:nth-child(47){ grid-column: 10; grid-row: 9; }
+  #social li:nth-child(48){ grid-column: 1; grid-row: 10; }
+  #social li:nth-child(49){ grid-column: 3 / 5; grid-row: 10; }
+  #social li:nth-child(50){ grid-column: 6; grid-row: 10; }
+  #social li:nth-child(51){ grid-column: 9 / -1; grid-row: 10; }
+  #social li:nth-child(52){ grid-column: 5 / 8; grid-row: 11; }
+  #social li:nth-child(53){ grid-column: 9; grid-row: 11; }
+  #social li:nth-child(54){ grid-column: 1 / 3; grid-row: 12; }
+  #social li:nth-child(55){ grid-column: 8; grid-row: 12; }
+  #social li:nth-child(56){ grid-column: 1 / -1; grid-row: 13; }
 
-  #bricks li:nth-child(1){ grid-row-start: 1; }
-  #bricks li:nth-child(2){ grid-row-start: 2; }
-  #bricks li:nth-child(3){ grid-row-start: 2; }
+
+
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -208,11 +154,10 @@
     display: inline;
   }
 
-  svg{
+  #social li img{
     width: 8vw;
     height: 8vw;
     margin: 0;
-    fill: white;
   }
 
   h1, .collection{
@@ -230,7 +175,7 @@
   }
 
   h1 > span{
-    background-color: var(--orange-dark);
+    background-color: #C60F0F;
   }
 
   h1 > span:nth-child(2n), .collection > h2, .collection > span{
@@ -239,7 +184,7 @@
   }
 
   h1 > span:nth-child(2n){
-    background-color: var(--orange-light);
+    background-color: #FE4E00;
   }
 
   h1 > span:first-child, .collection > span:first-child{
@@ -275,21 +220,21 @@
   }
 
   .collection > span:first-child, .collection > span:last-child{
-    background-color: var(--green-dark);
+    background-color: #19513E;
   }
 
   .collection:nth-child(2n+1) > span:first-child, .collection:nth-child(2n+1) > span:last-child{
-    background-color: var(--orange-dark);
+    background-color: #C60F0F;
   }
 
   .collection > h2,.collection > span{
     line-height: 20vw;
-    background-color: var(--green-light);
+    background-color: #8EA604;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.27);
   }
 
   .collection:nth-child(2n+1) > h2,.collection:nth-child(2n+1) > span{
-    background-color: var(--orange-light);
+    background-color: #FE4E00;
   }
 
   .collection:nth-child(n) > .summary{
@@ -343,7 +288,7 @@
     top: 10vw;
     left: 0vw;
     content: "";
-    background-color: var(--green-dark);
+    background-color: #19513E;
     width: 100vw;
     height: 20vw;
     z-index: -1;
@@ -352,7 +297,7 @@
   }
 
   .collection:nth-child(2n+1) > li:after, .collection:nth-child(2n+1) > .summary:after {
-    background-color: var(--orange-dark);
+    background-color: #C60F0F;
   }
 
 
