--- a/css/main-new02.css
+++ b/css/main-new02.css
@@ -13,36 +13,21 @@
   --neutral: #33658A;
   --text-dark: #1A2830;
 
-  --desktopLight1: #E5FCC2;
-  --desktopLight2: #9DE0AD;
-  --desktopLight3: #45ADA8;
-  --desktopDark1: #547980;
-  --desktopDark2: #594F4F;
-
-  --desktopLight1: #1b998b;
-  --desktopLight2: #ffc857;
-  --desktopLight3: #E8175D;
-  --desktopDark1: #262322;
-  --desktopDark2: #233d4d;
-  --desktopDark3: #0d171c;
-              
 }
 
 
 @media only screen and (min-width: 901px){
   body{
-    color: var(--desktopDark1);
-    background-color: var(--desktopDark2);
+    background-color: var(--blue-light);
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 1vw;
     line-height: 1.2vw;
-    background: url("/images/gridBackground.svg"), linear-gradient(var(--desktopDark3), var(--desktopDark2));
   }
   #holder {
     display:inline-block;  
     width: 95vw;
-    height: 630vw;
+    height: 570vw;
     overflow: hidden;
     position: relative;
     margin: 0 2.5vw;
@@ -54,22 +39,19 @@
   }
 
   h3{
-    font-family: 'Bungee', cursive;
+    font-family: 'Bungee Shade', cursive;
     font-size: 2.5vw;
-    line-height: 4.2vw;
+    line-height: 3.5vw;
     text-align: right;
     padding: 0.3vw 0;
-    color: var(--desktopLight2);
-    border-bottom: var(--desktopLight2) 2px solid;
-    background-color: var(--desktopDark1);
+    background-color: var(--lowlight2);
     display: inline;
   }
 
   p{
     padding: 1vw;
-    background-color: var(--desktopLight1);
-    margin: 1vw 0.5vw;
-    border-top: var(--desktopLight3) 3px solid;
+    background-color: white;
+    margin-bottom: 2vw;
   }
 
 
@@ -77,7 +59,6 @@
     display: inline;
   }
   img{
-    width: 100%;
     height: 100%;
     display: block;
   }
@@ -114,16 +95,18 @@
   }
   #grid3 {
     position: absolute;
-    width: 800vw;
-    transform-origin: 700vw 0;
-    transform: translatex(-700vw) rotatez(-60deg) skewY(30deg);
+    width: 600vw;
+    transform-origin: 500vw 0;
+    transform: translatex(-500vw) rotatez(-60deg) skewY(30deg);
     z-index: 1;
   }
   
   #grid1 > a, #grid1 > div{
     grid-column-end: span 4;  
     grid-row-end: span 4;  
-    margin: 1vw 0 0 1vw;
+    display: block;
+    text-align: right;
+    margin-right: 1vw;
   }
   #grid2 > div{
     grid-column-end: span 4;  
@@ -136,10 +119,10 @@
 
   #grid2 > div:nth-child(1){
     padding: 1.5vw;
-    color: var(--desktopLight1);
-    background-color: var(--desktopDark1);
+    color: white;
+    background-color: black;
     border-top: none;
-    border-left: var(--desktopLight1) 3px solid;
+    border-left: white 1px solid;
     grid-column-end: span 7;  
     grid-row-end: span 4;
     grid-column-start: 12;  
@@ -147,26 +130,12 @@
     z-index: 2;  
   }
   #grid2 > div:nth-child(2){
-    background-color: var(--desktopDark1);
+    background-color: var(--highlight1); 
     grid-column-end: span 4;  
     grid-row-end: span 4;
     grid-column-start: 16;  
     grid-row-start: 4;
     position: relative;
-  }
-  #grid2 > div:nth-child(2) img{
-    width: auto;
-    height: 100%;
-    margin-left: 10%
-  }
-  #grid2 > div:nth-child(2)::after{
-    content: url("/images/grid.svg");
-    position: absolute;
-    width: 20.2vw;
-    height: 20.2vw;
-    margin-top: -108%;
-    margin-left: -0.5%;
-    transform: scale(1,1.1547);
   }
   
   #grid1 > a:nth-child(1){
