--- a/css/main01.css
+++ b/css/main01.css
@@ -237,6 +237,9 @@
 
 
 @media only screen and (min-width: 601px) and (max-width: 1200px) {
+  #intro {
+    display: none;
+  }
   body {
     background-color: var(--neutral);
     color: var(--text-dark);
@@ -267,14 +270,6 @@
     font-weight: 700;
     padding: 2vw 3vw;
     background-color: var(--highlight1);
-  }
-
-  #intro{
-    color: var(--highlight1);
-    margin: 0;
-    font-family: 'Bungee', cursive;
-    font-size: 2.6vw;
-    margin: 0.6vw 2vw;
   }
 
   a {
@@ -348,29 +343,27 @@
   #social li:nth-child(2){ grid-column: 3; grid-row: 9; }
   #social li:nth-child(3){ grid-column: 5; grid-row: 10; }
   #social li:nth-child(4){ grid-column: 7; grid-row: 9; }
-  #social li:nth-child(5){ grid-column: 6; grid-row: 11; }
+  #social li:nth-child(5){ grid-column: 8; grid-row: 8; }
   #social li:nth-child(6){ grid-column: 2; grid-row: 10; }
   #social li:nth-child(7){ grid-column: 4; grid-row: 11; }
   #social li:nth-child(8){ grid-column: 8; grid-row: 11; }
   
   #social li:nth-child(9){ grid-column: 1 / 4; grid-row: 3; }
   #social li:nth-child(10){ grid-column: 2 / 7; grid-row: 4; }
-  #social li:nth-child(11){ grid-column: 4 / 9; grid-row: 7; }
-
-  #social li:nth-child(12){ grid-column: 6 / 10; grid-row: 8; }
-
+  #social li:nth-child(11){ grid-column: 5 / 10; grid-row: 7; }
   
-  #social li:nth-child(13){ grid-column: 5 / 7; grid-row: 3; }
-  #social li:nth-child(14){ grid-column: 9; grid-row: 4; }
-  #social li:nth-child(15){ grid-column: 1/ 6; grid-row: 5; }
-  #social li:nth-child(16){ grid-column: 3 / 5; grid-row: 6; }
-  #social li:nth-child(17){ grid-column: 6 / 9; grid-row: 6; }
-  #social li:nth-child(18){ grid-column: 8 / 10; grid-row: 5; }
-  #social li:nth-child(19){ grid-column: 1; grid-row: 8; }
-  #social li:nth-child(20){ grid-column: 5; grid-row: 8; }
-  #social li:nth-child(21){ grid-column: 8; grid-row: 9; }
-  #social li:nth-child(22){ grid-column: 4 / 6; grid-row: 9; }
-  #social li:nth-child(23){ grid-column: 2 / 4; grid-row: 7; }
+  #social li:nth-child(12){ grid-column: 5 / 7; grid-row: 3; }
+  #social li:nth-child(13){ grid-column: 9; grid-row: 4; }
+  #social li:nth-child(14){ grid-column: 1/ 6; grid-row: 5; }
+  #social li:nth-child(15){ grid-column: 3 / 5; grid-row: 6; }
+  #social li:nth-child(16){ grid-column: 6 / 9; grid-row: 6; }
+  #social li:nth-child(17){ grid-column: 8 / 10; grid-row: 5; }
+  #social li:nth-child(18){ grid-column: 1; grid-row: 8; }
+  #social li:nth-child(19){ grid-column: 5 / 7; grid-row: 8; }
+  #social li:nth-child(20){ grid-column: 8; grid-row: 9; }
+  #social li:nth-child(21){ grid-column: 4 / 6; grid-row: 9; }
+  #social li:nth-child(22){ grid-column: 2 / 4; grid-row: 7; }
+  #social li:nth-child(23){ grid-column: 9 / 10; grid-row: 8; }
   #social li:nth-child(24){ grid-column: 7 / 9; grid-row: 10; }
   #social li:nth-child(25){ grid-column: 1 / 4; grid-row: 11; }
   #social li:nth-child(26){ grid-column: 7 / 9 ; grid-row: 10; }
@@ -388,9 +381,9 @@
   #social li:nth-child(37){ grid-column: 5; grid-row: 6; }
   #social li:nth-child(38){ grid-column: 9; grid-row: 6; }
   #social li:nth-child(39){ grid-column: 1; grid-row: 7; }
-  #social li:nth-child(40){ grid-column: 9; grid-row: 7; }
+  #social li:nth-child(40){ grid-column: 4; grid-row: 7; }
   #social li:nth-child(41){ grid-column: 3 / 5; grid-row: 8; }
-  #social li:nth-child(42){ grid-column: 7; grid-row: 11; }
+  #social li:nth-child(42){ grid-column: 7; grid-row: 8; }
   #social li:nth-child(43){ grid-column: 1 / 3; grid-row: 9; }
   #social li:nth-child(44){ grid-column: 6; grid-row: 9; }
   #social li:nth-child(45){ grid-column: 9; grid-row: 9; }
@@ -398,7 +391,7 @@
   #social li:nth-child(47){ grid-column: 3 / 5; grid-row: 10; }
   #social li:nth-child(48){ grid-column: 6; grid-row: 10; }
   #social li:nth-child(49){ grid-column: 9; grid-row: 10; }
-  #social li:nth-child(50){ grid-column: 5; grid-row: 11; }
+  #social li:nth-child(50){ grid-column: 5 / 8; grid-row: 11; }
   #social li:nth-child(51){ grid-column: 9; grid-row: 11; }
   #social li:nth-child(52){ grid-column: 1 / 3; grid-row: 12; }
   #social li:nth-child(53){ grid-column: 8 / -1; grid-row: 12; }
@@ -446,8 +439,7 @@
     width: 9vw;
     height: 9vw;
     margin: 0 1vw;
-    fill: var(--text-dark);
-    background: #B3C3C4;
+    fill: #D9E3E9;
   }
 
   h1, .collection{
@@ -510,21 +502,21 @@
   }
 
   .collection > span:first-child, .collection > span:last-child{
-    background-color: var(--orange-dark);
+    background-color: var(--green-dark);
   }
 
   .collection:nth-child(2n+1) > span:first-child, .collection:nth-child(2n+1) > span:last-child{
-    background-color: var(--green-dark);
+    background-color: var(--orange-dark);
   }
 
   .collection > h2,.collection > span{
     line-height: 20vw;
-    background-color: var(--orange-light);
+    background-color: var(--green-light);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.27);
   }
 
   .collection:nth-child(2n+1) > h2,.collection:nth-child(2n+1) > span{
-    background-color: var(--green-light);
+    background-color: var(--orange-light);
   }
 
   .collection:nth-child(n) > .summary{
@@ -540,7 +532,7 @@
     width: 80vw;
     height: 20vw;
     margin: auto;
-    background-color: #B3C3C4;
+    background-color: #D9E3E9;
     line-height: 20vw;
     text-align: center;
     position: relative;
@@ -579,7 +571,7 @@
     top: 10vw;
     left: 0vw;
     content: "";
-    background-color: var(--orange-dark);
+    background-color: var(--green-dark);
     width: 100vw;
     height: 20vw;
     z-index: -1;
@@ -588,7 +580,7 @@
   }
 
   .collection:nth-child(2n+1) > li:after, .collection:nth-child(2n+1) > .summary:after {
-    background-color: var(--green-dark);
+    background-color: var(--orange-dark);
   }
 
 
