--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,42 @@
 */  
 }
 
+@media only screen and (min-width: 1601px){
+  #grid1 > a, #grid1 > div{
+    grid-column-end: span 3;  
+    grid-row-end: span 3;  
+    margin: 1vw 0 0 1vw;
+  }
+  #grid2 > div{
+    grid-column-end: span 3;  
+  }
+  #grid3 > a{
+    grid-column-end: span 3;  
+    grid-row-end: span 3;
+   }
+  h3{
+    font-size: 1.8vw;
+    line-height: 3.15vw;
+    padding: 0.3vw 0;
+  }
+  p{
+    font-size: 1vw;
+    padding: 0.75vw;
+    margin: 0.75vw 0.375vw 0.75vw 0;
+  }
+  #grid2 > div:nth-child(1){
+    grid-column-start: 10;  
+    grid-row-start: 7;
+  }
+  #grid2 > div:nth-child(2){
+    grid-column-start: 16;  
+    grid-row-start: 5;
+  }
+  #holder {
+    height: 410vw;
+  }
+}
+
 
 @media only screen and (min-width: 601px) and (max-width: 1200px) {
   body {
