--- a/football/css/ufwc.css
+++ b/football/css/ufwc.css
@@ -40,7 +40,7 @@ h1 {
 
 p {
   font-size: 1.2em;
-  line-height: 1.5;
+  line-height: 1.2;
   margin: auto;
   margin-bottom: 20px;
   max-width: 600px;
@@ -122,8 +122,8 @@ text {
       margin-bottom: 20px;
     }
     p {
-      font-size: 1em;
-      line-height: 1.5;
+      font-size: 1.1em;
+      line-height: 1.2;
       margin-bottom: 20px;
     }
     #matchDetails{
@@ -133,6 +133,14 @@ text {
 }
 
 @media screen and (min-width: 1400px){  
+    #textContent{
+      width: 40%;
+      float: left;
+    }
+    svg{
+      width: 60%;
+      margin-bottom: 50px;
+    }
     #matchDetails{
       font-size: 1em;
     }
