--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@
   --neutral: #33658A;
   --text-dark: #062A3B;
 
+  --tabletCream: #ebdabe;
+  --tabletRed: #db1d1d;
+  --tabletDark: #1f1916;
+
   --desktopLight1: #E5FCC2;
   --desktopLight2: #9DE0AD;
   --desktopLight3: #45ADA8;
@@ -45,7 +49,7 @@
   #holder {
     display:inline-block;  
     width: 95vw;
-    height: 750vw;
+    height: 820vw;
     overflow: hidden;
     position: relative;
     margin: 0;
@@ -294,8 +298,8 @@
 
 @media only screen and (min-width: 601px) and (max-width: 1200px) {
   body {
-    background-color: var(--neutral);
-    color: var(--text-dark);
+    background-color: var(--tabletRed);
+    color: var(--tabletDark);
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     text-align: center;
@@ -309,6 +313,8 @@
     left: -12vw;
     top: -3vw;
     z-index: -1;
+    -webkit-filter: sepia(40%);
+    filter: sepia(40%);
   }
 
   h1, h2{
@@ -322,11 +328,12 @@
     line-height: normal;
     font-weight: 700;
     padding: 2vw 3vw;
-    background-color: var(--highlight1);
+    color: var(--tabletCream);
+    background-color: var(--tabletDark);
   }
 
   #intro{
-    color: var(--highlight1);
+    color: var(--tabletDark);
     margin: 0;
     font-family: 'Bungee', cursive;
     font-size: 2.6vw;
@@ -334,7 +341,7 @@
   }
 
   a {
-    color: var(--text-dark);
+    color: var(--tabletCream);
   }
 
   p {
@@ -353,13 +360,13 @@
   }
 
   #social li{
-    background-color: var(--text-dark);
-    box-shadow: 0px 0px 0 1.98vw  var(--highlight2);
+    background-color: var(--tabletCream);
+    box-shadow: 0px 0px 0 1.98vw  var(--tabletRed);
   }
 
    #social .headline {
-    color: var(--highlight1);
-    background-color: var(--text-dark);
+    color: var(--tabletDark);
+    background-color: var(--tabletCream);
   }
 
   img, svg{
@@ -367,8 +374,13 @@
     display: block;
   }
 
+  img{
+    -webkit-filter: sepia(30%);
+    filter: sepia(30%);
+  }
+
   svg {
-    fill: var(--highlight1);
+    fill: var(--tabletDark);
   }
 
   #social{
@@ -379,13 +391,14 @@
     width: 96vw;
     padding: 2vw 2vw 2vw 2vw;
     grid-template-columns: repeat(9, 9vw);
-    background-color: var(--highlight2);
+    background-color: var(--tabletRed);
   }
 
   #bricks li{
     grid-column-end: span 3;
     grid-row-end: span 10;
-    background-color: white;
+    background-color: var(--tabletDark);
+    color: var(--tabletCream);
   }
 
   #social img, svg{
@@ -397,7 +410,7 @@
   }
 
   #social .blankCell {
-    background-color: var(--highlight2);
+    background-color:  var(--tabletRed);
   }
 
   #social li:nth-child(1){ grid-column: 2; grid-row: 8; }
